--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
+    "@hookform/devtools": "^4.3.1",
     "tailwindcss": "^3.4.1"
   }
 }
