--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
   },
