--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "postcss": "^8.4.35",
@@ -22,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
