--- a/server/question-service/.env.sample
+++ b/server/question-service/.env.sample
@@ -1,5 +1,6 @@
 DB_CLOUD_URI=<CONNECTION_STRING>
 DB_LOCAL_URI=mongodb://localhost/${KEY_IN_YOUR_DB_HERE}
+DB_DOCKER_URI=mongodb://mongo_db/${KEY_IN_YOUR_DB_HERE}
 PORT=3002
 ENV=PROD
 
