feat(client,server): updated question to allow for multi select

--- a/server/question-service/docker-compose.yml
+++ b/server/question-service/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       ENV: DOCKER
     depends_on:
-      - mongo_db
+      - question_service_mongo_db
 
 volumes:
   question_service_mongo_db: {}
