--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.1",
@@ -12,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/codemirror-theme-vscode": "^4.21.25",
     "@uiw/react-codemirror": "^4.21.25",
-    "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
     "flowbite": "^2.3.0",
@@ -20,7 +20,6 @@
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "postcss": "^8.4.35",
     "rc-select": "^14.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -68,6 +67,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
     "@hookform/devtools": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1"
   }
 }
