--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "y-monaco": "^0.1.5",
     "y-webrtc": "^10.3.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
     "@hookform/devtools": "^4.3.1",
+    "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1"
