--- a/client/.env.local.sample
+++ b/client/.env.local.sample
@@ -1,3 +1,4 @@
 REACT_APP_USER_API_URL=http://localhost:3001
 REACT_APP_QUESTION_API_URL=http://localhost:3002
 REACT_APP_MATCHING_API_URL=http://localhost:3003
+REACT_APP_COLLABORATION_API_URL=http://localhost:3004
