--- a/server/collaboration-service/.env.sample
+++ b/server/collaboration-service/.env.sample
@@ -1,5 +1,5 @@
 DB_CLOUD_URI=""
-DB_LOCAL_URI=mongodb://localhost/MatchingServiceDB
-DB_DOCKER_URI=mongodb://question_service_mongo_db:27017/MatchingServiceDB
-PORT=3003
+DB_LOCAL_URI=mongodb://localhost/CollaborationServiceDB
+DB_DOCKER_URI=mongodb://collaboration_service_mongo_db:27017/CollaborationServiceDB
+PORT=3004
 ENV=LOCAL
